# rust-poker

./: Cargo.toml  Dockerfile  readme.md
src/: eval.rs  hand_ranks.rs  main.rs
src/card/: card.rs  cardvalue.rs  mod.rs  suit.rs
