[package]
name = "rust-poker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-poker"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "=0.8.5"
tide = "0.14.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.8.1"
